# sciurus17

./: .ci.rosinstall  README.md
.github/workflows/: industrial_ci.yml
sciurus17/: package.xml
sciurus17_bringup/: package.xml
sciurus17_examples/: README.md
sciurus17_gazebo/: package.xml
sciurus17_moveit_config/: package.xml
sciurus17_moveit_config/config/: kinematics.yaml  sciurus17.srdf
sciurus17_msgs/: package.xml
sciurus17_tools/: package.xml
sciurus17_tools/rules/: 91-sciurus17.rules
sciurus17_tools/scripts/: get_chest_camera_product_id  get_chest_camera_vendor_id
sciurus17_tools/src/: realsense_hwreset.cpp
sciurus17_vision/launch/: chest_camera.launch
