<?xml version="1.0"?>
<package format="2">
  <name>sciurus17_bringup</name>
  <version>2.0.0</version>
  <description>Sciurus17_bringup package</description>

  <maintainer email="andrea.gavazzi@me.com">agRobotics</maintainer>
  <author email="andrea.gavazzi@me.com">Andrea Gavazzi</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
