<?xml version="1.0"?>
<package>
  <name>sciurus17_tools</name>
  <version>3.0.0</version>
  <description>Sciurus17_tools package</description>

  <maintainer email="andrea.gavazzi@me.com">agRobotics</maintainer>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>realsense2_camera</build_depend>

  <run_depend>roscpp</run_depend>

</package>
